<resources>
    <string name="app_name">Anwap Movies</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="movies_not_found">Список видео пуст</string>
    <string name="update_list">Обновить список</string>
    <string name="menu_compose_test">Compose test</string>
    <string name="home_search">Поиск</string>
    <string name="video_url_not_found">URL видео не найден</string>
    <string name="home_choose_source">Выбрать источник</string>
    <string name="video_link_not_found">Ссылка на видео не найдена</string>
    <string name="menu_preferences">Настройки</string>
    <string name="menu_history">История</string>
    <string name="menu_favorite">Избранное</string>
    <string name="favorite">Избранное</string>
    <string name="menu_get_file">Выбрать файл</string>
    <string name="menu_from_path">Открыть ссылку</string>
    <string name="menu_get_folder">Выбрать папку</string>
    <string name="menu_home">Домой</string>
    <string name="quality_format">Качество:%s</string>
    <string name="genre_format">Жанр:%s</string>
    <string name="actors_format">Актеры:%s</string>
    <string name="directors">Режисеры:</string>
    <string name="video_quality">Качество</string>
    <string name="f_history_title">История просмотров</string>
    <string name="menu_clear_file_view_history">Очистить историю просмотра</string>
    <string name="menu_clear_favorites">Очистить избранное</string>
    <string name="movie_cleared">Видео удалено из кеша</string>
    <string name="question_remove">Удалить?</string>
    <string name="remove_from_history">Удалить из истории</string>
    <string name="clear_history">Очистить историю</string>
    <string name="question_remove_all_history">Вы уверены, что хотите удалить всю историю просмотра?</string>
    <string name="question_remove_from_history_total">Хотите удалить \"%s\" из истории просмотра и очистить кеш?</string>
    <string name="question_remove_cinema_from_cache">Хотите удалить \"%s\" из кеша?</string>
    <string name="question_remove_from_history_title">Хотите удалить \"%s\" из истории просмотра?</string>
    <string name="question_remove_episodes_from_cache">Хотите удалить \"%s\"(%s сезон,%s серия) из кеша?</string>
    <string name="question_remove_episodes_from_viewhistory">Хотите удалить \"%s\"(%s сезон,%s серия) из истории просмотра?</string>
    <string name="question_remove_serial_from_history">Хотите удалить \"%s\" из истории просмотра?</string>
    <string name="title_home">Главная</string>
    <string name="press_back_again_to_exit">Нажмите назад еще раз чтобы выйти</string>
    <string name="exit">Выход</string>
    <string name="download_skip">Пропустить</string>
    <string name="pref_main_header">Основные</string>
    <string name="action_settings">Настройки</string>
    <string name="play">Смотреть</string>
    <string name="pause">Пауза</string>
    <string name="need_permission_message">Для работы приложения необходимо разрешить доступ на запись</string>
    <string name="need_notice_permission_message">Для работы приложения необходимо разрешить показ уведомлений</string>
    <string name="new_films_update">Доступно новое обновление фильмов</string>
    <string name="new_films_update_not_found_title">Обновлений нет</string>
    <string name="new_films_update_not_found_content">На данный момент новых обновлений по фильмам и сериалам не поступало. Вы можете проверить обновления позже.</string>
    <string name="update_all_cinem_title">Загрузить обновления?</string>
    <string name="full_update">Полное</string>
    <string name="update_data">Обновить данные</string>
    <string name="full_update_title">Полное обновление</string>
    <string name="full_update_description">Полное обновление фильмов и сериалов позволит получить исправленные ссылки, но время обновления больше</string>
    <string name="question_update_format">Вы хотите загрузить новые фильмы от %s?</string>
    <string name="question_update_all">Вы хотите загрузить новые фильмы и сериалы?\nОбновление происходит в фоновом режиме</string>
    <string name="downloading_update">Загружаем обновление фильмов</string>
    <string name="wating">Подождите…</string>
    <string name="update_started">Обновление началось</string>
    <string name="update_cinema_formatted">Обновление %s</string>
    <string name="cinema">Фильм</string>
    <string name="serial">Сериал</string>
    <string name="imdb">IMDB</string>
    <string name="imdb_formatted">IMDB %s</string>
    <string name="kp">KP</string>
    <string name="kp_formatted">KP %s</string>
    <string name="updating_channel_name">Обновление</string>
    <string name="updating">Обновление фильмов и сериалов %d%%</string>
    <string name="updating_all">Обновление фильмов и сериалов</string>
    <string name="updating_data">Обновление данных…</string>
    <string name="click_to_cancel_update">Нажмите OK, чтобы отменить</string>
    <string name="please_wait">Пожалуйста, подождите…</string>
    <string name="no_movie_title">Нет названия</string>
    <string name="serial_title">%s (%s сезон,%s серия)</string>
    <string name="movie_not_found">Фильм или сериал не найден</string>
    <string name="watch_trailer">Смотреть трейлер</string>
    <string name="watch">Смотреть</string>
    <string name="watch_hd">Смотреть HD</string>
    <string name="seasons">Сезоны</string>
    <string name="spinner_season">сезон</string>
    <string name="spinner_episode">серия</string>
    <string name="seasons_count">сезонов</string>
    <string name="episodes_count">эпизодов</string>
    <string name="path_not_found">Не найден путь</string>
    <string name="episodes_not_found">Не найдены эпизоды</string>
    <string name="more">больше</string>
    <string name="less">меньше</string>
    <string name="update_finished_success">Обновление завершено успешно</string>
    <string name="update_finished_error">Обновление не завершено %s</string>
    <string name="update_error_simple">Обновление не завершено. Произошла ошибка.</string>
    <string name="attention">Внимание!</string>
    <string name="cinema_cache_complete">Фильм полностью загружен</string>
    <string name="serial_episode_cache_complete">Эпизод полностью загружен</string>
    <string name="cinema_cache_attention">Вы хотите загрузить фильм?</string>
    <string name="cinema_download_attention">Вы хотите сохранить фильм в файл?</string>
    <string name="cinema_download_not_available">Неверная ссылка для загрузки</string>
    <string name="m3u8_download_unavailable">Скачивание M3U8 временно недоступно</string>
    <string name="serial_episode_cache_attention">Вы хотите кешировать \"%s\"(%s сезон,%s серия)?</string>
    <string name="cinema_cache_attention_new">Вы хотите загрузить фильм и отменить предыдущую загрузку "%s"?</string>
    <string name="serial_episode_cache_attention_new">Вы хотите загрузить эпизод и отменить предыдущую загрузку "%s"?</string>
    <string name="cache_attention_continue">Вы хотите продолжить загрузку?</string>
    <string name="cinema_cache_attention_links_title">Вы хотите продолжить загрузку фильма "%s"?</string>
    <string name="serial_episode_cache_attention_links_title">Вы хотите продолжить загрузку \"%s\" (%s сезон,%s серия)?</string>
    <string name="cache_attention_links_not_equals">Вы хотите загрузить фильм "%s" с другой ссылкой?</string>
    <string name="update_attention">Вы хотите обновить фильм/сериал?</string>
    <string name="mobile_network_play">Вы не подключены к WIFI\nПродолжить?</string>
    <string name="connection_network_none_dialog_content">Отсутствует интернет соединение\nПродолжить?</string>
    <string name="cache_description">При отмене загруженные данные будут удалены\nПродолжить?</string>
    <string name="update_description">Данные и сылки будут автоматически обновлены\nПродолжить?</string>
    <string name="download_description">Файл %s будет сохранён в папку Downloads.\nПродолжить?</string>
    <string name="download_description_error">На данный момент доступны для скачивания только фильмы. Выберите ссылку в списке ссылок</string>
    <string name="pref_player">Плеер</string>
    <string name="pref_common">Общее</string>
    <string name="player_min_cache_time_sec">Минимальный буфер, сек</string>
    <string name="player_max_cache_time_sec">Максимальный буфер, сек</string>
    <string name="internet_connection_error">Отсутствует интернет соединение</string>
    <string name="duration_format">Длительность: %s</string>
    <string name="updated_format">Обновлен: %s</string>
    <string name="movie_viewhistory_cleared">Фильм удален из истории</string>
    <string name="movie_cache_cleared">Фильм удален из кеша</string>
    <string name="movie_mp4_links_no_found">Ссылки на mp4 не найдены</string>
    <string name="movie_mp4_links_copied">Ссылки на mp4 скопированы в буфер</string>
    <string name="movie_mp4_links_label">Ссылки на mp4</string>
    <string name="serial_history_cleared">Сериал удален из истории</string>
    <string name="serial_episode_cache_cleared">Эпизод удален из кеша</string>
    <string name="search_settings">Настройки поиска</string>
    <string name="search_settings_title">Где искать?</string>
    <string name="search_order_settings">Настройки сортировки</string>
    <string name="sort_updated">По дате обновления</string>
    <string name="sort_last_time">По дате просмотра</string>
    <string name="sort_year_desc">По году убывание</string>
    <string name="sort_title">По названию</string>
    <string name="sort_ratings">По рейтингам IMDB и KP</string>
    <string name="sort_year_asc">По году возрастание</string>
    <string name="question_remove_all_favorites">Удалить всё избранное?</string>
    <string name="notification_channel_id">notification_channel_cache</string>
    <string name="notification_title">Загрузка фильма</string>
    <string name="cache">Кешировать</string>
    <string name="download">Загрузить</string>
    <string name="download_cinema_title_format">Загрузка \"%s\" - %.01f%%</string>
    <string name="download_cinema_title_short_format">Загрузка ~ %.01f%%</string>
    <string name="download_cinema_state_state_updating">Обновление списка…</string>
    <string name="download_cinema_state_state_pause">Пауза</string>
    <string name="download_text_format">~ %s</string>
    <string name="download_text_format_one_more">Осталось ~ %s, еще %s</string>
    <string name="download_cinema_text_format_empty_downloads">Осталось ~ %s</string>
    <string name="search_by_title">В названии</string>
    <string name="search_by_directors">В режисёрах</string>
    <string name="search_by_actors">В актёрах</string>
    <string name="search_by_genres">В жанрах</string>
    <string name="genres">Жанры</string>
    <string name="countries">Страны</string>
    <string name="menu_check_update">Проверить новые фильмы</string>
    <string name="menu_download_new">Загрузить новые фильмы</string>
    <string name="movie_comments">Комментарии</string>
    <string name="movie_comments_auth_hint">Чтобы оставить комментарий, авторизируйтесь на сайте Anwap.</string>
    <string name="movie_comments_open_site">Перейти на сайт</string>
    <string name="movie_comments_load_more">Загрузить ещё</string>
    <string name="in_films">В фильмах</string>
    <string name="in_serials">В сериалах</string>
    <string name="likes_priority">Приоритет по лайкам</string>
    <string name="home_highlights_recent">Новинки</string>
    <string name="home_highlights_best_now">Лучшее сейчас</string>
    <string name="home_highlights_for_you">Для вас</string>
    <string name="menu_send_feedback">Сообщить об ошибке</string>
    <string name="history_empty_title">История просмотра пуста</string>
    <string name="error_loading_data">Ошибка загрузки</string>
    <string name="retry">Повторить</string>
</resources>