<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_download_file"
        android:title="@string/download"
        android:icon="@drawable/outline_download_for_offline_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_cache_movie"
        android:title="@string/cache"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_clear_cache"
        android:visible="false"
        android:title="@string/menu_clear_file_view_history"
        android:icon="@drawable/ic_delete_cache_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_update_data"
        android:title="@string/update_data"
        android:icon="@drawable/ic_cloud_download_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_send_feedback"
        android:title="@string/menu_send_feedback"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom" />
</menu>