<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <RadioGroup
        android:id="@+id/rgrSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbLastTime"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_last_time"
            android:visibility="gone"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/rbNone"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_updated" />

        <RadioButton
            android:id="@+id/rbTitle"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_title" />

        <RadioButton
            android:id="@+id/rbRatings"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_ratings" />

        <RadioButton
            android:id="@+id/rbYearDesc"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_year_desc" />

        <RadioButton
            android:id="@+id/rbYearAsc"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_year_asc" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swPriority"
        style="@style/DetailsSubTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/likes_priority" />

</LinearLayout>