<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/home_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_search_settings"
        android:title="@string/search_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order_settings"
        android:title="@string/search_order_settings"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_clear_cache"
        android:title="@string/menu_clear_file_view_history"
        android:icon="@drawable/ic_delete_cache_white"
        app:showAsAction="never" />
</menu>