<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rgrSort"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbTitle"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_title" />

        <RadioButton
            android:id="@+id/rbDirectors"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_directors" />

        <RadioButton
            android:id="@+id/rbActors"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_actors" />

        <RadioButton
            android:id="@+id/rbGenres"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_genres" />

        <CheckBox
            android:id="@+id/chbCinemas"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/in_films" />

        <CheckBox
            android:id="@+id/chbSerials"
            style="@style/DetailsSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/in_serials" />
    </RadioGroup>
</LinearLayout>